--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
 
                 <div>
-                    <div class="row flex">
+                    <div class="row_plan flex">
                         <div class="col_4 border">
                             <div class="card altezza">
                                 <div class="title_plan flex center">
@@ -322,6 +322,30 @@
                             </div>
 
                         </div>
+                    </div>
+                    <div class="row_full border">
+                        <div class="title_plan flex center">
+                            <i class="fa-solid fa-user"></i>
+                            <div class="tplan">Singolo</div>
+                        </div>
+                        <div class="plan_full">
+                            <h3>
+                                Enterprise
+                            </h3>
+                            <h4 class="price">
+                                Contatta l'ufficio vendite per i prezzi
+                            </h4>
+                            <p class="info">
+                                Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala
+                            </p>
+                            <div class="button_abs">
+                                <button class="button_plan" >
+                                    Contatta l'ufficio vendite
+
+                                </button>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             
