--- a/index.html
+++ b/index.html
@@ -348,6 +348,24 @@
 
                     </div>
                 </div>
+
+                <section class="partner">
+                    <div class="container_partner clearfix">
+                        <div class="blocco_img" >
+                            <img class="img_partner" src="./assets/img/partner.png" alt="">
+                        </div>
+                        <div class="blocco_testo">
+                            <h3>Entra in contatto con un partner Dropbox</h3>
+                            <p>
+                                Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, intregrazione, gestione e supporto continui.
+                            </p>
+
+                            <button class="button_partner">
+                                Trova un partner
+                            </button>
+                        </div>
+                    </div>
+                </section>
             
              </div>
 
