--- a/index.html
+++ b/index.html
@@ -467,11 +467,73 @@
                 <a href="#">Scopri di più sui nostri clienti</a>
             </section>
             
-            <section class="prova" >
+        </section>
+
+        <div class="sponsor">
+            <div class="row flex">
+                <div class="col_4_sponsor">
+                    <div class="quadrato flex_sponsor">
+                        <div class="box flex center uno">
+                            <img  class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                        </div>
+                        <div class="box flex center due">
+                            <img  class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                        </div>
+                        <div class="box flex center tre">
+                            <img  class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                        </div>
+                        <div class="box flex center quattro">
+                            <img  class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col_4_sponsor">
+                    <div class="quadrato flex_sponsor">
+                        <div class="box flex center">
+                            <img  class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                        </div>
+                        <div class="box flex center">
+                            <img  class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                        </div>
+                        <div class="box flex center">
+                            <img  class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                        </div>
+                        <div class="box flex center">
+                            <img  class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col_4_sponsor">
+                    <div class="quadrato flex_sponsor">
+                        <div class="box flex center cinque">
+                            <img  class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                        </div>
+                        <div class="box flex center sei">
+                            <img  class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                        </div>
+                        <div class="box flex center sette">
+                            <img  class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                        </div>
+                        <div class="box flex center otto">
+                            <img  class="logo"  src="./assets/img/lonely_planet.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <section class="prova flex" >
+            <div class="box flex center">
+                <h2>Porta Dropbox Business <br> nella tua azienda</h2>
+                <button>Inizia la tua prova gratuita</button>
                 
-            </section>
+                <div class="elementi">
+                </div>
 
-
+            </div>
         </section>
 
     </main>
