--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                 <div class="col_4_sponsor">
                     <div class="quadrato flex_sponsor">
                         <div class="main_sponsor flex column">
-                            <img src="" alt="">
+                            <img class="logo" src="./assets/img/designit.svg" alt="">
                             <div class="separatore"></div>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis exercitationem dignissimos rerum voluptas sit quod quam ad, rem debitis atque.
@@ -526,8 +526,22 @@
 
         <section class="prova flex" >
             <div class="elementi flex container space_evenly">
-                <h2>Porta Dropbox Business <br> nella tua azienda</h2>
+                <h2 class="title_prova">Porta Dropbox Business <br> nella tua azienda</h2>
                 <button class="button_prova">Inizia la tua prova gratuita</button>
+            </div>
+        </section>
+
+        <section class="faq">
+            <div class="faq_container container">
+                <div class="faq_title">
+                    <h2>Domande frequenti</h2>
+                </div>
+                <div class="faq_question">
+                    <h4>
+                        Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </h4>
+                    
+                </div>
             </div>
         </section>
 
