faq senza animazioni

--- a/index.html
+++ b/index.html
@@ -536,11 +536,53 @@
                 <div class="faq_title">
                     <h2>Domande frequenti</h2>
                 </div>
+                <div class="faq_question top">
+                    <div class="faq_question_title flex space">
+                        <h4>
+                            Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                        </h4>
+                        <i class="fa-solid fa-chevron-up"></i>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea doloremque eligendi accusantium quod dolorum earum incidunt quaerat dicta laudantium vitae?
+                        </p>
+                </div>
                 <div class="faq_question">
-                    <h4>
-                        Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
-                    </h4>
-                    
+                    <div class="faq_question_title flex space">
+                        <h4>
+                            Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                        </h4>
+                        <i class="fa-solid fa-chevron-up"></i>
+                        <i class="fa-solid fa-chevron-down" aria-hidden="false"></i>
+                    </div>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea doloremque eligendi accusantium quod dolorum earum incidunt quaerat dicta laudantium vitae?
+                        </p>
+                </div>
+                <div class="faq_question">
+                    <div class="faq_question_title flex space">
+                        <h4>
+                            Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                        </h4>
+                        <i class="fa-solid fa-chevron-up"></i>
+                        <i class="fa-solid fa-chevron-down" aria-hidden="false"></i>
+                    </div>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea doloremque eligendi accusantium quod dolorum earum incidunt quaerat dicta laudantium vitae?
+                        </p>
+                </div>
+                <div class="faq_question">
+                    <div class="faq_question_title flex space">
+                        <h4>
+                            Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                        </h4>
+                        <i class="fa-solid fa-chevron-up"></i>
+                        <i class="fa-solid fa-chevron-down" aria-hidden="false"></i>
+                    </div>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea doloremque eligendi accusantium quod dolorum earum incidunt quaerat dicta laudantium vitae?
+                        </p>
                 </div>
             </div>
         </section>
