--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <div class="pagina">
                         <a href="#">Accedi</a>
                     </div>
-                    <button class="button_nav">
+                    <a href="" class="button_nav">
                         Inizia
-                    </button>
+                    </a>
 
                 </div>
 
@@ -70,15 +70,15 @@
 
                     <div class="col_3 ">
                         <div class="testo_index">
-                            <p>
+                            <p class="testo_p">
                                 Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
                                 posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente
                                 e integrato per ottimizzare il flusso di lavoro esistente.
                             </p>
-                            <button class="button_main">
+                            <a href="" class="button_main">
                                 Inizia la tua prova gratuita
-                            </button>
-                            <p>
+                            </a>
+                            <p class="sottotesto_p" >
                             Annulla in qualsiasi momento
                             </p>
                         </div>
@@ -339,10 +339,10 @@
                                 Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala
                             </p>
                             <div class="button_abs">
-                                <button class="button_plan" >
+                                <a href="" class="button_plan" >
                                     Contatta l'ufficio vendite
 
-                                </button>
+                                </a>
                             </div>
                         </div>
 
@@ -360,9 +360,9 @@
                                 Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, intregrazione, gestione e supporto continui.
                             </p>
 
-                            <button class="button_partner">
+                            <a href="" class="button_partner">
                                 Trova un partner
-                            </button>
+                            </a>
                         </div>
                     </div>
             </section>
@@ -541,8 +541,10 @@
                         <h4>
                             Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                         </h4>
-                        <i class="fa-solid fa-chevron-up"></i>
-                        <i class="fa-solid fa-chevron-down"></i>
+                    
+                        <a>
+                            <i class="fa-solid fa-chevron-down freccia_giu"></i>
+                        </a>
                     </div>
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea doloremque eligendi accusantium quod dolorum earum incidunt quaerat dicta laudantium vitae?
