loghi e footer modificati

--- a/index.html
+++ b/index.html
@@ -502,16 +502,16 @@
                 <div class="col_4_sponsor">
                     <div class="quadrato flex_sponsor">
                         <div class="box flex center uno">
-                            <img class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                            <img class="logo padding20" src="./assets/img/designit.svg" alt="">
                         </div>
                         <div class="box flex center due">
-                            <img class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                            <img class="logo h30" src="./assets/img/arizona_state_university.svg" alt="">
                         </div>
                         <div class="box flex center tre">
-                            <img class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                            <img class="logo padding20" src="./assets/img/university_of_florida.svg" alt="">
                         </div>
                         <div class="box flex center quattro">
-                            <img class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                            <img class="logo h30" src="./assets/img/topps.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -536,16 +536,16 @@
                 <div class="col_4_sponsor">
                     <div class="quadrato flex_sponsor">
                         <div class="box flex center cinque">
-                            <img class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                            <img class="logo h30" src="./assets/img/world_bicycle_relief.svg" alt="">
                         </div>
                         <div class="box flex center sei">
-                            <img class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                            <img class="logo padding20" src="./assets/img/hearst_corp.svg" alt="">
                         </div>
                         <div class="box flex center sette">
-                            <img class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                            <img class="logo h30" src="./assets/img/lonely_planet.svg" alt="">
                         </div>
                         <div class="box flex center otto">
-                            <img class="logo" src="./assets/img/lonely_planet.svg" alt="">
+                            <img class="logo h30" src="./assets/img/clear_channel.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -576,51 +576,58 @@
                         <a>
                             <i class="fa-solid fa-chevron-down freccia_giu"></i>
                         </a>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea doloremque eligendi accusantium
+                            quod dolorum earum incidunt quaerat dicta laudantium vitae?
+                        </p>
                     </div>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea doloremque eligendi accusantium
-                        quod dolorum earum incidunt quaerat dicta laudantium vitae?
-                    </p>
                 </div>
                 <div class="faq_question">
                     <div class="faq_question_title flex space">
                         <h4>
                             Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                         </h4>
-                        <i class="fa-solid fa-chevron-up"></i>
-                        <i class="fa-solid fa-chevron-down" aria-hidden="false"></i>
+
+                        <a>
+                            <i class="fa-solid fa-chevron-down freccia_giu"></i>
+                        </a>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea doloremque eligendi accusantium
+                            quod dolorum earum incidunt quaerat dicta laudantium vitae?
+                        </p>
                     </div>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea doloremque eligendi accusantium
-                        quod dolorum earum incidunt quaerat dicta laudantium vitae?
-                    </p>
                 </div>
                 <div class="faq_question">
                     <div class="faq_question_title flex space">
                         <h4>
                             Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                         </h4>
-                        <i class="fa-solid fa-chevron-up"></i>
-                        <i class="fa-solid fa-chevron-down" aria-hidden="false"></i>
+
+                        <a>
+                            <i class="fa-solid fa-chevron-down freccia_giu"></i>
+                        </a>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea doloremque eligendi accusantium
+                            quod dolorum earum incidunt quaerat dicta laudantium vitae?
+                        </p>
                     </div>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea doloremque eligendi accusantium
-                        quod dolorum earum incidunt quaerat dicta laudantium vitae?
-                    </p>
                 </div>
                 <div class="faq_question">
                     <div class="faq_question_title flex space">
                         <h4>
                             Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                         </h4>
-                        <i class="fa-solid fa-chevron-up"></i>
-                        <i class="fa-solid fa-chevron-down" aria-hidden="false"></i>
+
+                        <a>
+                            <i class="fa-solid fa-chevron-down freccia_giu"></i>
+                        </a>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea doloremque eligendi accusantium
+                            quod dolorum earum incidunt quaerat dicta laudantium vitae?
+                        </p>
                     </div>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea doloremque eligendi accusantium
-                        quod dolorum earum incidunt quaerat dicta laudantium vitae?
-                    </p>
                 </div>
+                
             </div>
         </section>
 
@@ -632,105 +639,106 @@
         <div class="contenitore_footer">
             <div class="elenchi_footer flex space">
                 <div class="elenco flex column">
-                    <h3>Lavora con noi</h3>
+                    <h3>Dropbox</h3>
                     <ul>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Applicazioni desktop</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Perchè Dropbox</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Piani</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Sicurezza</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Funzioni</a>
                         </li>
                     </ul>
                 </div>
                 <div class="elenco flex column">
-                    <h3>Lavora con noi</h3>
+                    <h3>Prodotti</h3>
                     <ul>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Applicazioni desktop</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Perchè Dropbox</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Piani</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Sicurezza</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Funzioni</a>
                         </li>
                     </ul>
                 </div>
                 <div class="elenco flex column">
-                    <h3>Lavora con noi</h3>
+                    <h3>Azienda</h3>
                     <ul>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Applicazioni desktop</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Perchè Dropbox</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Piani</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Sicurezza</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Funzioni</a>
                         </li>
                     </ul>
                 </div>
                 <div class="elenco flex column">
-                    <h3>Lavora con noi</h3>
+                    <h3>Supporto</h3>
                     <ul>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Applicazioni desktop</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Perchè Dropbox</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Piani</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Sicurezza</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Funzioni</a>
                         </li>
                     </ul>
                 </div>
                 <div class="elenco flex column">
-                    <h3>Lavora con noi</h3>
+                    <h3>Community</h3>
                     <ul>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Applicazioni desktop</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Perchè Dropbox</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Piani</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Sicurezza</a>
                         </li>
                         <li>
-                            <a class="link_footer" href="">Pagina 1</a>
+                            <a class="link_footer" href="">Funzioni</a>
                         </li>
                     </ul>
                 </div>
+                
             </div>
             <div class="separatore">
 
