--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav>
             <div class="row flex">
                 <div class="col_6 flex align">
-                    <div class="logo flex align">
+                    <div class="logo1 flex align">
                         <img src="./assets/img/logo-small.png" alt="logo dropbox">
                     </div>
                     <div class="pagina">
